# primitive_Qt_chat

./: README.md
Qt/: CMakeLists.txt
Qt/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
Qt/server/: CMakeLists.txt  client.cpp  client.h  main.cpp  server.cpp  server.h
